# Generated by Django 5.2.6 on 2025-09-25 12:21

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0002_compraproducto_precio_unitario_producto_descripcion_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='DireccionEnvio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre_direccion', models.CharField(help_text='Ej: Casa, Trabajo, etc.', max_length=100)),
                ('nombre_completo', models.CharField(max_length=200)),
                ('calle', models.CharField(max_length=200)),
                ('numero', models.CharField(max_length=20)),
                ('piso_departamento', models.CharField(blank=True, max_length=50, null=True)),
                ('ciudad', models.CharField(max_length=100)),
                ('provincia', models.CharField(max_length=100)),
                ('codigo_postal', models.CharField(max_length=20)),
                ('telefono', models.CharField(max_length=20)),
                ('es_predeterminada', models.BooleanField(default=False)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Dirección de Envío',
                'verbose_name_plural': 'Direcciones de Envío',
            },
        ),
        migrations.CreateModel(
            name='MetodoPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('tarjeta', 'Tarjeta de Crédito/Débito'), ('efectivo', 'Efectivo'), ('transferencia', 'Transferencia Bancaria')], default='tarjeta', max_length=20)),
                ('nombre_titular', models.CharField(blank=True, max_length=200, null=True)),
                ('numero_tarjeta', models.CharField(blank=True, max_length=20, null=True)),
                ('fecha_vencimiento', models.DateField(blank=True, null=True)),
                ('es_predeterminada', models.BooleanField(default=False)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Método de Pago',
                'verbose_name_plural': 'Métodos de Pago',
            },
        ),
        migrations.CreateModel(
            name='Pedido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente de Pago'), ('pagado', 'Pagado'), ('enviado', 'Enviado'), ('entregado', 'Entregado'), ('cancelado', 'Cancelado')], default='pendiente', max_length=20)),
                ('costo_envio', models.DecimalField(decimal_places=2, default=0, max_digits=10)),
                ('total_productos', models.DecimalField(decimal_places=2, max_digits=10)),
                ('total_pedido', models.DecimalField(decimal_places=2, max_digits=10)),
                ('notas', models.TextField(blank=True, null=True)),
                ('direccion_envio', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='tienda.direccionenvio')),
                ('metodo_pago', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='tienda.metodopago')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Pedido',
                'verbose_name_plural': 'Pedidos',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='PedidoProducto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cantidad', models.IntegerField()),
                ('precio_unitario', models.DecimalField(decimal_places=2, max_digits=10)),
                ('pedido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tienda.pedido')),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tienda.producto')),
            ],
            options={
                'verbose_name': 'Producto del Pedido',
                'verbose_name_plural': 'Productos del Pedido',
            },
        ),
    ]
