# Generated by Django 5.2.6 on 2025-09-25 12:48

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0003_direccionenvio_metodopago_pedido_pedidoproducto'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Cupon',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigo', models.CharField(help_text='Código único del cupón', max_length=20, unique=True)),
                ('descripcion', models.CharField(help_text='Descripción del cupón', max_length=200)),
                ('tipo_descuento', models.CharField(choices=[('porcentaje', 'Porcentaje'), ('monto_fijo', 'Monto Fijo')], default='porcentaje', max_length=20)),
                ('valor_descuento', models.DecimalField(decimal_places=2, help_text='Valor del descuento', max_digits=10)),
                ('fecha_expiracion', models.DateTimeField(help_text='Fecha de expiración del cupón')),
                ('usos_maximos', models.PositiveIntegerField(default=1, help_text='Número máximo de usos')),
                ('usos_actuales', models.PositiveIntegerField(default=0, help_text='Número actual de usos')),
                ('activo', models.BooleanField(default=True, help_text='Si el cupón está activo')),
                ('minimo_compra', models.DecimalField(decimal_places=2, default=0, help_text='Monto mínimo de compra requerido', max_digits=10)),
            ],
            options={
                'verbose_name': 'Cupón',
                'verbose_name_plural': 'Cupones',
            },
        ),
        migrations.CreateModel(
            name='Resena',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('calificacion', models.IntegerField(choices=[(1, '1 estrella'), (2, '2 estrellas'), (3, '3 estrellas'), (4, '4 estrellas'), (5, '5 estrellas')])),
                ('comentario', models.TextField(blank=True, null=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tienda.producto')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Reseña',
                'verbose_name_plural': 'Reseñas',
                'ordering': ['-fecha_creacion'],
                'unique_together': {('usuario', 'producto')},
            },
        ),
    ]
