# Generated by Django 5.2.6 on 2025-09-25 20:31

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0009_wishlist'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.AddField(
            model_name='profile',
            name='nivel_membresia',
            field=models.CharField(choices=[('bronce', 'Bronce'), ('plata', 'Plata'), ('oro', 'Oro'), ('platino', 'Platino')], default='bronce', help_text='Nivel de membresía', max_length=10),
        ),
        migrations.AddField(
            model_name='profile',
            name='puntos_disponibles',
            field=models.PositiveIntegerField(default=0, help_text='Puntos disponibles para canjear'),
        ),
        migrations.AddField(
            model_name='profile',
            name='puntos_totales',
            field=models.PositiveIntegerField(default=0, help_text='Puntos totales acumulados'),
        ),
        migrations.CreateModel(
            name='HistorialPuntos',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('ganados', 'Puntos Ganados'), ('canjeados', 'Puntos Canjeados'), ('expirados', 'Puntos Expirados')], max_length=10)),
                ('puntos', models.IntegerField(help_text='Cantidad de puntos (positivo para ganados, negativo para canjeados)')),
                ('descripcion', models.CharField(help_text='Descripción de la transacción', max_length=200)),
                ('fecha', models.DateTimeField(default=django.utils.timezone.now)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='historial_puntos', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Historial de Puntos',
                'verbose_name_plural': 'Historial de Puntos',
                'ordering': ['-fecha'],
            },
        ),
    ]
