# Generated by Django 5.2.6 on 2025-09-26 10:55

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0011_comparacionproductos'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='NewsletterSubscription',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('email', models.EmailField(help_text='Email del suscriptor', max_length=254, unique=True)),
                ('nombre', models.CharField(blank=True, help_text='Nombre opcional del suscriptor', max_length=100, null=True)),
                ('frecuencia', models.CharField(choices=[('diaria', 'Diaria'), ('semanal', 'Semanal'), ('mensual', 'Mensual')], default='semanal', help_text='Frecuencia de envío del newsletter', max_length=20)),
                ('activo', models.BooleanField(default=True, help_text='Si la suscripción está activa')),
                ('fecha_suscripcion', models.DateTimeField(default=django.utils.timezone.now, help_text='Fecha de suscripción')),
                ('fecha_ultimo_envio', models.DateTimeField(blank=True, help_text='Fecha del último envío', null=True)),
                ('token_confirmacion', models.CharField(blank=True, help_text='Token para confirmar suscripción', max_length=64, null=True, unique=True)),
                ('confirmado', models.BooleanField(default=False, help_text='Si la suscripción ha sido confirmada')),
                ('recibir_ofertas', models.BooleanField(default=True, help_text='Recibir ofertas y promociones')),
                ('recibir_novedades', models.BooleanField(default=True, help_text='Recibir novedades de productos')),
                ('recibir_recomendaciones', models.BooleanField(default=True, help_text='Recibir recomendaciones personalizadas')),
            ],
            options={
                'verbose_name': 'Suscripción Newsletter',
                'verbose_name_plural': 'Suscripciones Newsletter',
                'ordering': ['-fecha_suscripcion'],
            },
        ),
        migrations.CreateModel(
            name='NewsletterCampaign',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(help_text='Título de la campaña', max_length=200)),
                ('asunto', models.CharField(help_text='Asunto del email', max_length=200)),
                ('contenido_html', models.TextField(help_text='Contenido HTML del newsletter')),
                ('contenido_texto', models.TextField(blank=True, help_text='Versión texto plano', null=True)),
                ('fecha_creacion', models.DateTimeField(default=django.utils.timezone.now)),
                ('fecha_programada', models.DateTimeField(blank=True, help_text='Fecha de envío programado', null=True)),
                ('fecha_envio', models.DateTimeField(blank=True, help_text='Fecha real de envío', null=True)),
                ('estado', models.CharField(choices=[('borrador', 'Borrador'), ('programado', 'Programado'), ('enviando', 'Enviando'), ('enviado', 'Enviado'), ('cancelado', 'Cancelado')], default='borrador', max_length=20)),
                ('total_suscriptores', models.IntegerField(default=0, help_text='Total de suscriptores objetivo')),
                ('enviados', models.IntegerField(default=0, help_text='Emails enviados')),
                ('abiertos', models.IntegerField(default=0, help_text='Emails abiertos')),
                ('clics', models.IntegerField(default=0, help_text='Clics en enlaces')),
                ('frecuencia_target', models.CharField(blank=True, help_text='Frecuencia específica (opcional)', max_length=20, null=True)),
                ('solo_confirmados', models.BooleanField(default=True, help_text='Solo suscriptores confirmados')),
                ('creado_por', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Campaña Newsletter',
                'verbose_name_plural': 'Campañas Newsletter',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='NewsletterLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('envio', 'Envío'), ('apertura', 'Apertura'), ('clic', 'Clic'), ('rebote', 'Rebote'), ('cancelacion', 'Cancelación')], max_length=20)),
                ('fecha', models.DateTimeField(default=django.utils.timezone.now)),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True)),
                ('user_agent', models.TextField(blank=True, null=True)),
                ('url_clic', models.URLField(blank=True, help_text='URL donde se hizo clic', null=True)),
                ('campaign', models.ForeignKey(help_text='Campaña relacionada', on_delete=django.db.models.deletion.CASCADE, related_name='logs', to='tienda.newslettercampaign')),
                ('suscriptor', models.ForeignKey(help_text='Suscriptor', on_delete=django.db.models.deletion.CASCADE, related_name='logs', to='tienda.newslettersubscription')),
            ],
            options={
                'verbose_name': 'Log Newsletter',
                'verbose_name_plural': 'Logs Newsletter',
                'ordering': ['-fecha'],
            },
        ),
    ]
