# Generated by Django 5.2.6 on 2025-09-26 20:46

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tienda', '0022_remove_producto_imagen_file_producto_imagen_blob_and_more'),
    ]

    operations = [
        migrations.RemoveField(
            model_name='producto',
            name='imagen_blob',
        ),
        migrations.RemoveField(
            model_name='producto',
            name='imagen_nombre',
        ),
        migrations.RemoveField(
            model_name='producto',
            name='imagen_tipo_mime',
        ),
        migrations.CreateModel(
            name='ProductoImagen',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imagen_blob', models.BinaryField(help_text='Imagen almacenada como blob en la base de datos')),
                ('imagen_nombre', models.CharField(help_text='Nombre original del archivo de imagen', max_length=255)),
                ('imagen_tipo_mime', models.CharField(help_text='Tipo MIME de la imagen (ej: image/jpeg)', max_length=100)),
                ('es_principal', models.BooleanField(default=False, help_text='Si esta es la imagen principal del producto')),
                ('orden', models.PositiveIntegerField(default=0, help_text='Orden de visualización de la imagen')),
                ('fecha_subida', models.DateTimeField(default=django.utils.timezone.now, help_text='Fecha de subida de la imagen')),
                ('descripcion', models.CharField(blank=True, help_text='Descripción opcional de la imagen', max_length=200, null=True)),
                ('producto', models.ForeignKey(help_text='Producto al que pertenece la imagen', on_delete=django.db.models.deletion.CASCADE, related_name='imagenes', to='tienda.producto')),
            ],
            options={
                'verbose_name': 'Imagen de Producto',
                'verbose_name_plural': 'Imágenes de Productos',
                'ordering': ['orden', 'fecha_subida'],
                'unique_together': {('producto', 'orden')},
            },
        ),
    ]
